feature: mongo connection

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ ENV=dev
 PORT=xxx
 
 ## Database
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_USER=
-DATABASE_PASSWORD=
+DATABASE_URI=mongodb+srv://<USER>:<PASSWORD>@clustertest.ywympn2.mongodb.net/<DATABASE>
+DATABASE_USE_NEW_URL_PARSER=xx
+DATABASE_USE_UNIFIED_TOPOLOGY=xx
+DATABASE_USE_FIND_AND_MODIFY=xx
