--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,5 @@ DATABASE_URI=mongodb+srv://<USER>:<PASSWORD>@clustertest.ywympn2.mongodb.net/<DA
 DATABASE_USE_NEW_URL_PARSER=xx
 DATABASE_USE_UNIFIED_TOPOLOGY=xx
 DATABASE_USE_FIND_AND_MODIFY=xx
-MLABS_COMMAND="ls dir cd mv etc..."
+
+MLABS_COMMAND="C://mi-carpeta//wscript.exe"
