--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,6 @@ DATABASE_USE_NEW_URL_PARSER=xx
 DATABASE_USE_UNIFIED_TOPOLOGY=xx
 DATABASE_USE_FIND_AND_MODIFY=xx
 
+PATH_FILE_TRANSCRIPTION=xxx
+
 MLABS_COMMAND="C://mi-carpeta//wscript.exe"
