--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.6.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "deep-diff": "^1.0.2",
     "html-to-docx": "^1.8.0",
     "moment-timezone": "^0.5.43",
     "mongoose": "^8.0.3",
