feat: metodo para loguear y registrar usuario

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ DATABASE_USE_FIND_AND_MODIFY=xx
 PATH_FILE_TRANSCRIPTION=xxx
 
 MLABS_COMMAND="C://mi-carpeta//wscript.exe"
+
+JWT_SECRET_KEY=xxxx
+JWT_EXPIRATION=xx
