feature: configuración y envio de emails para recuperar pass

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ MLABS_COMMAND="C://mi-carpeta//wscript.exe"
 
 JWT_SECRET_KEY=xxxx
 JWT_EXPIRATION=xx
+
+EMAIL_SENDER=xxxx@gmail.com
+EMAIL_PASSWORD=xxxxx
