--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "deep-diff": "^1.0.2",
+    "ejs": "^3.1.9",
     "html-to-docx": "^1.8.0",
     "moment-timezone": "^0.5.43",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -49,10 +51,12 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/ejs": "^3.1.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.0",
     "@types/supertest": "^2.0.12",
