feat: manejo de usuario

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ JWT_EXPIRATION=xx
 
 EMAIL_SENDER=xxxx@gmail.com
 EMAIL_PASSWORD=xxxxx
+EMAIL_SUPPORT=xxx
+EMAIL_APP_URL=http:xxxx:xxx
+EMAIL_COMPANY_NAME=xxxxx
